--- a/examples/express/public/css/style.css
+++ b/examples/express/public/css/style.css
@@ -1,3 +1,7 @@
+#content {
+  min-height: 400px;
+}
+
 #data table tbody tr{
   cursor:pointer;
 }
@@ -28,6 +32,21 @@
   display:inline;
 }
 
+#loading {
+  display: none;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  margin-left: -75px;
+  text-align: center;
+  padding-top: 100px;
+  box-sizing: border-box;
+  font-weight: bold;
+  background: rgba(200, 200, 200, 0.6) url('../img/loading.gif') center 50px no-repeat;
+  border-radius: 20px;
+}
 
 footer{
   margin-top:50px;
