Updated express sample app with bower

--- a/examples/express/views/layout.jade
+++ b/examples/express/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/bower_components/leaflet/dist/leaflet.css')
+    link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav#top-nav.navbar.navbar-default
@@ -35,8 +35,8 @@ html
       footer
         a(href="https://github.com/brendannee/node-gtfs") View on Github
       
-    script(src="//code.jquery.com/jquery-2.1.3.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js")
-    script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js")
-    script(src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js")
+    script(src="/bower_components/jquery/dist/jquery.min.js")
+    script(src="/bower_components/underscore/underscore-min.js")
+    script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
+    script(src="/bower_components/leaflet/dist/leaflet.js")
     script(src="javascripts/script.js")
